name:               surgery
version:            1.0.0
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
copyright:          Copyright (C) 2010-2015 Tony Morris
synopsis:           Chronological History of Surgical Procedures
category:           Data
description:        Chronological History of Surgical Procedures
homepage:           https://github.com/tonymorris/surgery
bug-reports:        https://github.com/tonymorris/surgery/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:tonymorris/surgery.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                      FilePather == 0.2.0
                    , MissingH == 1.3.0.1

  hs-source-dirs:
                    src
